--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects">Wifeys</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -30,14 +30,14 @@
         <div class="menu-links">
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li><a href="#projects" onclick="toggleMenu()">Wifeys</a></li>
             <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
     </div>
 </nav>
 <section id="profile">
     <div class="section__pic-container">
-    <img src="./assets/me.png" alt="Luke Profile Picture">
+    <img src="./assets/eren.gif" alt="Luke Profile Picture">
 </div>
 <div class="section__text">
     <p class="section__text__p1">Hello, I'm</p>
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet quos animi quam? Quasi magni debitis dignissimos fugit consequuntur veniam non ratione, commodi reprehenderit repellendus officiis optio voluptas dolores ullam nobis praesentium tempora quia sit. Adipisci tenetur iure voluptatem quibusdam similique odio impedit repellat quia, nobis quam quas voluptate. Asperiores, cum!</p>
+                <p>Hello! I'm Kyail Nay La and what you're seeing is, my cat. We didn't particularly give him a name and my brother started calling him "Mg Tote" and yeah he became Mg Tote, unfortunately. However, his doctor calls him Charlie because of his mustache. So, whenever someone asks me, what's his name? I just say Charlie :3. He is a spoiled cat who doesn't show any affectionate. Plus he kinda looks like 卍</p>
             </div>
         </div>
     </div>
@@ -190,7 +190,7 @@
         <div class="about-containers">
         <div class="details-container color-container">
             <div class="article-container">
-                <img src="/assets/hinata.gif" alt="Project 1" class="project-img size"/>
+                <img src="/assets/hinata2.gif" alt="Project 1" class="project-img size"/>
             </div>
             <h2 class="experience-sub-tittle project-title">Wifey One</h2>
             <div class="btn-container">
@@ -210,7 +210,7 @@
     </div>
         <div class="details-container color-container">
             <div class="article-container">
-                <img src="/assets/hinata2.gif" alt="Project 3" class="project-img size"/>
+                <img src="/assets/emma.gif" alt="Project 3" class="project-img size"/>
             </div>
             <h2 class="experience-sub-tittle project-title">Wifey Three</h2>
             <div class="btn-container">
